--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,14 +50,22 @@ dependencies {
     implementation deps.constraint_layout
     implementation deps.core_ktx
     implementation deps.kotlin.stdlib
+    implementation deps.kotlin.corutines
     implementation deps.lifecycle.livedata_ktx
     implementation deps.lifecycle.runtime
     implementation deps.lifecycle.java8
     implementation deps.retrofit.runtime
     implementation deps.retrofit.gson
+    implementation deps.retrofit.mock
+    implementation deps.retrofit.rxjava
+    implementation deps.okhttp.okhttp_logging_interceptor
+    implementation deps.okhttp.okhttp3
     implementation deps.glide.runtime
     implementation deps.rx_android
     implementation deps.rxjava2
+
+    implementation deps.intuit.sdp
+    implementation deps.intuit.ssp
 
     implementation deps.annotations.runtime
     implementation deps.dagger.runtime
