--- a/versions.gradle
+++ b/versions.gradle
@@ -9,22 +9,26 @@ versions.annotations = '4.6.0'
 versions.appcompat = '1.2.0'
 versions.constraint_layout = '2.0.4'
 versions.core_ktx = '1.3.2'
+versions.corutines = '1.5.0-RC'
 versions.dagger = '2.16'
 versions.espresso = '3.3.0'
 versions.fragment = '1.2.1'
 versions.glide = '4.8.0'
 versions.gradle_plugin = '4.0.1'
+versions.intuit = '1.0.6'
 versions.junit = '4.12'
 versions.junit_test = '1.1.2'
-versions.kotlin = '1.4.21'
+versions.kotlin = '1.5.0'
 versions.lifecycle = '2.2.0'
 versions.material = '1.0.0'
 versions.navigation = '2.3.0-alpha01'
+versions.okhttp = '4.9.0'
 versions.okhttp_logging_interceptor = '3.9.0'
 versions.recyclerview = '1.2.0-beta01'
 versions.retrofit = '2.9.0'
 versions.rx_android = '2.0.1'
 versions.rxjava2 = '2.1.3'
+versions.rxjava = '2.3.0'
 ext.versions = versions
 
 def deps = [:]
@@ -53,11 +57,18 @@ glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
 deps.glide = glide
 
 deps.gradleplugin = "com.android.tools.build:gradle:$versions.gradle_plugin"
+
+def intuit = [:]
+intuit.sdp = "com.intuit.sdp:sdp-android:$versions.intuit"
+intuit.ssp = "com.intuit.ssp:ssp-android:$versions.intuit"
+deps.intuit = intuit
+
 deps.junit = "junit:junit:$versions.junit"
 
 def kotlin = [:]
 kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 kotlin.gradle_plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+kotlin.corutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
 deps.kotlin = kotlin;
 
 def lifecycle = [:]
@@ -70,7 +81,10 @@ deps.lifecycle = lifecycle
 
 deps.material = "com.google.android.material:material:$versions.material"
 
-deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
+def okhttp = [:]
+okhttp.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp_logging_interceptor"
+okhttp.okhttp3 = "com.squareup.okhttp3:okhttp:$versions.okhttp"
+deps.okhttp = okhttp
 
 deps.recyclerview = "androidx.recyclerview:recyclerview:$versions.recyclerview"
 
@@ -78,6 +92,7 @@ def retrofit = [:]
 retrofit.runtime = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 retrofit.gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
 retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
+retrofit.rxjava = "com.squareup.retrofit2:adapter-rxjava2:$versions.rxjava"
 deps.retrofit = retrofit
 
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
