--- a/versions.gradle
+++ b/versions.gradle
@@ -9,7 +9,7 @@ versions.annotations = '4.6.0'
 versions.appcompat = '1.2.0'
 versions.constraint_layout = '2.0.4'
 versions.core_ktx = '1.3.2'
-versions.corutines = '1.5.0-RC'
+versions.corutines = '1.3.9'
 versions.dagger = '2.16'
 versions.espresso = '3.3.0'
 versions.fragment = '1.2.1'
@@ -29,6 +29,7 @@ versions.retrofit = '2.9.0'
 versions.rx_android = '2.0.1'
 versions.rxjava2 = '2.1.3'
 versions.rxjava = '2.3.0'
+versions.viewmodel = '2.3.1'
 ext.versions = versions
 
 def deps = [:]
@@ -68,14 +69,14 @@ deps.junit = "junit:junit:$versions.junit"
 def kotlin = [:]
 kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 kotlin.gradle_plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-kotlin.corutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
+kotlin.corutines = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
 deps.kotlin = kotlin;
 
 def lifecycle = [:]
 lifecycle.runtime = "androidx.lifecycle:lifecycle-runtime:$versions.lifecycle"
 lifecycle.java8 = "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle"
 lifecycle.compiler = "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
-lifecycle.viewmodel_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
+lifecycle.viewmodel_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.viewmodel"
 lifecycle.livedata_ktx = "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle"
 deps.lifecycle = lifecycle
 
